k8s/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - image: feniksa18/orders:2023-01-14-11-45-59
          name: orders
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
#          livenessProbe:
#            httpGet:
#              path: /health/live
#              port: server
#            initialDelaySeconds: 20
#            periodSeconds: 3
#          readinessProbe:
#            httpGet:
#              path: /health/ready
#              port: server
#            initialDelaySeconds: 20
#            periodSeconds: 3
---

apiVersion: v1
kind: Service
metadata:
  name: orders
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: orders
